# instaswap-sdk-contract

./: .ammanrc.js  .gitignore  Anchor.toml  CONTRIBUTING.md  VARIABLE_NAME_CHANGES.md  package.json
.github/: pull_request_template.md
.github/workflows/: test.yaml
programs/ratio-sdk/: Cargo.toml
programs/ratio-sdk/src/: constants.rs  enums.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/ratio-sdk/src/instructions/: mod.rs
programs/ratio-sdk/src/instructions/admin/: mod.rs  set_instaswap_fee.rs
programs/ratio-sdk/src/instructions/raydium/: add_liquidity_to_raydium.rs  mod.rs  remove_liquidity_from_raydium_v4.rs  remove_liquidity_from_raydium_v5.rs
programs/ratio-sdk/src/instructions/saber/: add_liquidity_to_saber.rs  mod.rs  remove_liquidity_from_saber.rs  unwrap_decimals_token.rs  wrap_decimals_token.rs
programs/ratio-sdk/src/states/: global_state.rs  mod.rs
scripts/: copy_idl.js  copy_idl.sh  match_branches.sh
tests/: sdk-contract.spec.ts
tests/admin-panel/: admin-panel.spec.ts  changeAuthority.ts  changeFundingWallet.ts  changeTreasuryWallet.ts  fundRatioToken.ts  setGlobalDebtCeiling.ts  setGlobalTvlLimit.ts  setInstaswapFee.ts  setPoolBorrowFee.ts  setPoolDebtCeiling.ts  setPoolDepositFee.ts  setPoolHarvestFee.ts  setRatioMint.ts  setUserDebtCeiling.ts  toggleEmerState.ts
tests/config/: accounts.ts
tests/interfaces/: GlobalState.ts  TokenCollat.ts  TokenCollatUser.ts  TokenMarket.ts  ata.ts  blacklist.ts  index.ts  miner.ts  pool.ts  quarry.ts  user.ts  userState.ts  users.ts
tests/ratio/: borrowUsdr.ts  createBlackList.ts  liquidate.ts  (+17 more)
(+21 files in other folders)
